# sttc_rspn

./: pyproject.toml  readme.md
src/sttc_rspn/psi/: main.py
src/sttc_rspn/psi/ccsd/: test_uhf_ccsd.py  uhf_ccsd.py
src/sttc_rspn/psi/ccsd/equations/: doubles_uhf.py  generate_equations.py  singles_uhf.py  uhf_ccsd_energy.py
src/sttc_rspn/rome/: hf_orbital_hessian.py
