[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "static_response_properties"
version = "0.1.0"
description = "Static response properties"
readme = "readme.md"
authors = [
  {name = "Paweł Wójcik", email = "pawel.wojcik5@gmail.com"},
]
dependencies = [
  "numpy",
  "scipy",
  "psi4",
  "pdaggerq",
]

[project.urls]
repository = "https://github.com/the-pawel-wojcik/static_response_properties.git"

[tool.hatch.build.targets.wheel]
packages = ["src/static_response_properties"]
