[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sttc_rspn"
version = "0.1.0"
description = "Static Response Properties"
readme = "readme.md"
authors = [
  {name = "Paweł Wójcik", email = "pawel.wojcik5@gmail.com"},
]
dependencies = [
  "numpy",
  "scipy",
  "psi4",
  "pdaggerq",
  "DePrinceLab",
]

[project.urls]
repository = "https://github.com/the-pawel-wojcik/sttc_rspn.git"

[tool.hatch.build.targets.wheel]
packages = ["src/sttc_rspn"]
